Edited wiki page through web user interface.

--- a/wiki/TelluriumReferenceManual.wiki
+++ b/wiki/TelluriumReferenceManual.wiki
@@ -1517,17 +1517,89 @@ Now run the tests as you normally do by either the Maven command or the IDE and 
 
 == Mock Http Server ==
 
-This feature only exists in Tellurium Core 0.7.0 SNAPSHOT. The MockHttpServer is an embedded http server leveraging the Java 6 http server and it is very convenient to test HTML source directly without running a web server. The MockHttpServer includes an embedded http server, a http handler, and a http port with the following constructors
+This feature only exists in Tellurium Core 0.7.0 SNAPSHOT. The MockHttpServer is an embedded http server leveraging the Java 6 http server and it is very convenient to test HTML source directly without running a web server. Tellurium defined two classes, i.e.,  MockHttpHandler and MockHttpServer.
+
+The MockHttpHandler is a class to process the http request,
 
 {{{
- public MockHttpServer()
+public class MockHttpHandler implements HttpHandler {
 
- public MockHttpServer(int port)
+  private Map<String, String> contents = new HashMap<String, String>();
 
- public MockHttpServer(int port, HttpHandler handler)
+  private String contentType = "text/html";
+
+  public void handle(HttpExchange exchange) {
+     ......
+  }
+}
 }}}
 
-and APIs
+The main method in MockHttpHandler is {{{handle(HttpExchange exchange)}}}, which reads the request URI, finds the corresponding response HTML source from the hash map _contents_, and then sends it back to the http client.
+
+By default, the response will be treated as a HTML source, you can change this by using the following setter.
+
+{{{
+public void setContentType(String contentType)
+}}}
+
+MockHttpHandler includes two methods to add URI and its HTML source to the hash map _contents_, i.e.,
+
+{{{
+public void registerBody(String url, String body)
+
+public void registerHtml(String url, String html)
+}}}
+
+The MockHttpHandler comes with a default HTML template as follows,
+
+{{{
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+    <head>
+        <title>Mock HTTP Server</title>
+    </head>
+    <body>
+    BODY_HTML_SOURCE   
+    </body>
+</html>
+}}}
+
+If you use {{{registerBody(String url, String body)}}}, the MockHttpHandler will use the above HTML template to wrap the HTML body. You overwrite the default HTML template by calling {{{registerHtml(String url, String html)}}} directly, which will use the whole HTML source you provide in the variable _html_.
+
+Usually, the MockHttpHandler is encapsulated by the MockHttpServer and you don't really need to work on it directly.
+
+The MockHttpServer includes an embedded http server, a http handler, and a http port:
+
+{{{
+public class MockHttpServer {
+  //default port
+  private int port = 8080;
+
+  private HttpServer server = null;
+  private MockHttpHandler handler;
+
+  public MockHttpServer() {
+    this.handler = new MockHttpHandler();
+    this.server = HttpServer.create();
+  }
+
+  public MockHttpServer(int port) {
+    this.handler = new MockHttpHandler();
+    this.port = port;
+    this.server = HttpServer.create();
+  }
+
+  public MockHttpServer(int port, HttpHandler handler) {
+    this.port = port;
+    this.handler = handler;
+    this.server = HttpServer.create();
+  }
+
+  ......
+}
+}}} 
+
+As you can see, the MockHttpServer provides three different constructors so that you can overwrite the default values. The MockHttpServer encapsulates the MockHttpHander by providing the following methods,
 
 {{{
 public void setContentType(String contentType)
@@ -1535,13 +1607,65 @@ public void setContentType(String contentType)
 public void registerHtmlBody(String url, String body)
 
 public void registerHtml(String url, String html)
+}}}
 
+You can stop and start the server with the following methods,
+
+{{{
 public void start()
 
 public void stop()
+}}} 
+
+We use a modified version of a HTML source provided by one Tellurium user as an example and create the UI module Groovy class as follows 
+
+{{{
+public class ListModule extends DslContext {
+  public static String LIST_BODY = """
+<div class="thumbnails">
+    <ul>
+        <li class="thumbnail">
+            <img alt="Image 1"
+                 src="/images_root/image_pictures/01.jpg"/>
+        </li>
+        <li class="thumbnail">
+            <img alt="Image 2"
+                 src="/images_root/image_pictures/02.jpg"/>
+        </li>
+        <li class="thumbnail">
+            <img alt="Image 3"
+                 src="/images_root/image_pictures/03.jpg"/>
+        </li>
+        <li class="thumbnail">
+        </li>
+        <li class="thumbnail active">
+            <img alt="Image 4"
+                 src="/images_root/image_pictures/04.jpg"/>
+        </li>
+        <li class="thumbnail potd">
+            <div class="potd-icon png-fix"/>
+            <img alt="Image 5"
+                 src="/images_root/image_pictures/05.jpg"/>
+        </li>
+    </ul>
+</div>    
+  """
+
+  public void defineUi() {
+    ui.Container(uid: "rotator", clocator: [tag: "div", class: "thumbnails"]) {
+      List(uid: "tnails", clocator: [tag: "ul"], separator: "li") {
+        UrlLink(uid: "all", clocator: [:])
+      }
+    }
+  }
+}
 }}}
 
-Example: 
+The reason we include the HTML source in a Groovy file is that the """ quote in Groovy is very easy to present complicated HTML source as a String variable. In Java, you have to concatenate each line of the HTML Source to make it a String variable.
+
+The {{{defineUi()}}} defines the UI module for the given HTML source. The major part of the UI module is a List, which uses UI templates to represent a list of links. You can see how easy and concise to use UI templates to represent UI elements in Tellurium.
+
+Based on the ListModule UI module, we define a Tellurium JUnit test case as follows,
 
 {{{
 public class ListTestCase  extends TelluriumJavaTestCase {
