--- a/wiki/TelluriumReferenceManual.wiki
+++ b/wiki/TelluriumReferenceManual.wiki
@@ -108,11 +108,11 @@ The Eventhandler will handle all events like "click", "type", "select", and so o
 
 Basically, there are two parts for the Tellurium framework. The first part is to define UI objects and the second part is working on the UI objects like firing events and getting data or status from the DOM.
 
-The "Define UI" operation can be demonstrated in the following sequence diagram:
+The {{{defineUI}}} operation can be demonstrated in the following sequence diagram:
 
 http://tellurium-users.googlegroups.com/web/TelluriumDefineUiSequenceDiagram.png?gda=aw23nVYAAAD5mhXrH3CK0rVx4StVj0LY6r7Fxo4RaVZ2InRIkvRUPVa5eLn5D8aMzeq5BmQm6Iqs27ZxjBtfjzl3w_ujfDpqd64s9EZTLP9aL_4jXQez_BPhGuxsWDLdLep2NLleRSE&gsc=x3TBYwsAAAAeXMPG6HH-B1VXA1h0gdTp
 
-When the Test Case calls "DefineUI", the DslContext will call the Dsl Object Parser to parse the UI definition. The Parser will look at each node and call the appropriate builders to build UI objects. The top level object will be stored in the UI Object registry so that we can search for the UI object by UI Id.
+When the Test code calls {{{defineUI()}}}, the DslContext calls the Dsl Object Parser to parse the UI definition. The Parser looks at each node and call the appropriate builders to build UI objects. The top level object is stored in the UI Object registry so that we can search for the UI object by _uid_.
 
 The processing of actions such as clicking on an UI object is illustrated in the following sequence diagram:
 
@@ -120,9 +120,9 @@ http://tellurium-users.googlegroups.com/web/TelluriumClickSequenceDiagram.png?gd
 
 The action processing includes following two parts.
 
-First, the DslContext will create a WorkflowContext so that we can pass meta data such the relative xpath inside it. Then, we start to look at the UI object registry by calling the walkTo method. Remember, the UI object registry hold all the top level UI objects. If we can find the top level UI object, we can recursively call the WalkTo method on the next UI object until we find the UI Object matching the UI id, or we cannot find the UI object by UI Id. During the walkTo method calls, we also start to aggregate relative xpaths or jQuery selector into the reference locator to the next UI object.
+First, the {{{DslContext}}} will create a {{{WorkflowContext}}} so that we can pass meta data such the relative locator inside it. Then, we start to look at the UI object registry by calling the {{{walkTo(uid)}}} method. Remember, the UI object registry hold all the top level UI objects. If we can find the top level UI object, we can recursively call the {{{walkTo(uid)}}} method on the next UI object until we find the UI Object matching the _uid_. During the {{{walkTo}}} method calls, we start to aggregate relative xpaths or jQuery selector into the reference locator and pass it on to the next UI object. In this way, the runtime locator is built.
 
-If the UI Object is found, we fire the action such as "click" on the UI object and pass in a closure which can access the eventhandler, the WorkflowContext, and the LocatorProcessor. The WorkflowContext includes the reference xpath to the UI object and the LocatorProcessor can generate the xpath of the UI object itself. In this way, the runtime locator is constructed. Then, the UI object will call the Eventhandler to fire the click event. The event will pass all the way down from the dispatcher and Selenium Client to the Selenium Server.
+If the UI Object is found, we call the action such as "click" on the UI object and the call is passed on to the EventHandler, where additional JavaScript events may be fired before and/or after the click action as shown in the above sequence diagram. The action and JavaScript events are passed all the way down from the dispatcher and connector to the Tellurium Engine, which is embedded in the Selenium server at the current stage.
 
 = Concepts and Features =
 
