--- a/wiki/TelluriumANewApproachForWebTesting.wiki
+++ b/wiki/TelluriumANewApproachForWebTesting.wiki
@@ -11,6 +11,9 @@ Automated web testing has always been one of the hottest and most important topi
 随着富Internet应用（RIA）和基于Ajax的web应用的兴起，对它们的自动化测试一直是软件测试领域中最热门也最重要的话题。而随着像RIA和Ajax这样新技术的出现，Web自动化测试工具必须能跟上这些技术的变化，并能够解决下面这些挑战：
 
   * *JavaScript Events*: JavaScript is everywhere on the web today. Many web applications are JavaScript heavy. To test JavaScript, the automated testing framework should be able to trigger JavaScript events in a very convenient way.
+
+  * *JavaScript事件*：JavaScript是现在Web应用的统治者。而许多Web应用Many web applications are JavaScript heavy. To test JavaScript, the automated testing framework should be able to trigger JavaScript events in a very convenient way.
+
   * *Ajax for Dynamic Web Content*: Web applications have many benefits over desktop applications; for example they have no installation and application updates are instantaneous and easier to support. Ajax is a convenient way to update a part of the web page without refreshing the whole page. AJAX makes web applications richer and more user-friendly. The web context for an Ajax application is usually dynamic. For example, in a data grid, the data and number of rows keep changing at runtime. 
   * *Robust/Responsive to Changes*: A good automated web testing tool should be able to address the changes in the web context to some degree so that users do not need to keep updating the test code.
   * *Easy to Maintain*: In an agile world, software development is based on iterations, and new features are added on in each sprint. The functional tests or user acceptance tests must be refactored and updated for the new features. The testing framework should provide the flexibility for users to maintain the test code very easily.
